# GefEnv

./: Makefile.am  autoclean.sh  autogen.sh  configure.ac
srcdir/info/: Makefile.am  main.cpp
srcdir/make-project/: Makefile.am  action.cpp  action.hpp  configuration.cpp  configuration.hpp  main.cpp
