#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([GefEnv], [0.A], [fege.guillaume@gmail.com])
AC_LANG(C++)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])


AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.



AC_CONFIG_FILES([Makefile
])

AC_OUTPUT
